Configuration File Update (Control Hub)
Switched from ExpansionHub to ControlHub in configuration files.

--- a/TeamCode/src/main/res/xml/main.xml
+++ b/TeamCode/src/main/res/xml/main.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='UTF-8' standalone='yes' ?>
 <Robot type="FirstInspires-FTC">
-    <LynxUsbDevice name="Expansion Hub Portal 1" serialNumber="DQ3D3L9G" parentModuleAddress="1">
-        <LynxModule name="Expansion Hub 1" port="1">
+    <LynxUsbDevice name="Expansion Hub Portal 1" serialNumber="(embedded)" parentModuleAddress="173">
+        <LynxModule name="Expansion Hub 173" port="173">
             <Motor name="front left" port="0" />
             <Motor name="front right" port="1" />
             <Motor name="back right" port="2" />
