--- a/TeamCode/src/main/res/xml/blank.xml
+++ b/TeamCode/src/main/res/xml/blank.xml
@@ -1,4 +1,2 @@
 <?xml version='1.0' encoding='UTF-8' standalone='yes' ?>
-<Robot type="FirstInspires-FTC">
-
-</Robot>
+<Robot type="FirstInspires-FTC" />
