Added intake motor and controls
Intake motor added in both configurations and registered in the Motors class. 

The controls for the intake is:
Right Trigger: Pulls rings toward the launcher.
Left Trigger: Pushes rings out of robot.

* Removed html tags due to there being issues with it not being treated as an html tag.

--- a/TeamCode/src/main/res/xml/controlhub.xml
+++ b/TeamCode/src/main/res/xml/controlhub.xml
@@ -8,5 +8,9 @@
             <Motor name="back left" port="3" />
             <LynxEmbeddedIMU name="IMU_1" port="0" bus="0" />
         </LynxModule>
+        <LynxModule name="Expansion Hub 2" port="2">
+            <Motor name="intake" port="0" />
+            <LynxEmbeddedIMU name="imu" port="0" bus="0" />
+        </LynxModule>
     </LynxUsbDevice>
 </Robot>
