--- a/TeamCode/src/main/res/xml/controlhub.xml
+++ b/TeamCode/src/main/res/xml/controlhub.xml
@@ -2,10 +2,10 @@
 <Robot type="FirstInspires-FTC">
     <LynxUsbDevice name="Expansion Hub Portal 1" serialNumber="(embedded)" parentModuleAddress="173">
         <LynxModule name="Expansion Hub 173" port="173">
-            <Motor name="front left" port="0" />
-            <Motor name="front right" port="1" />
-            <Motor name="back right" port="2" />
-            <Motor name="back left" port="3" />
+            <goBILDA5202SeriesMotor name="front left" port="0" />
+            <goBILDA5202SeriesMotor name="front right" port="1" />
+            <goBILDA5202SeriesMotor name="back right" port="2" />
+            <goBILDA5202SeriesMotor name="back left" port="3" />
             <LynxEmbeddedIMU name="IMU_1" port="0" bus="0" />
         </LynxModule>
         <LynxModule name="Expansion Hub 2" port="2">
