--- a/TeamCode/src/main/res/xml/main_no_webcam.xml
+++ b/TeamCode/src/main/res/xml/main_no_webcam.xml
@@ -9,6 +9,7 @@
             <Servo name="hopper" port="0" />
             <ContinuousRotationServo name="wobble_left" port="1" />
             <ContinuousRotationServo name="wobble_right" port="2" />
+            <Servo name="spatula" port="3" />
             <RevColorSensorV3 name="colorSensor" port="0" bus="1" />
             <RevTouchSensor name="wobbleTouch" port="0" />
             <LynxEmbeddedIMU name="IMU_1" port="0" bus="0" />
